<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/ed_title"
        android:hint="@string/masukan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,TextFields" />
    <EditText
        android:id="@+id/ed_text"
        android:hint="@string/masukan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,TextFields" />
    <Button
        android:id="@+id/ubah"
        android:text="@string/ubah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>