<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="@string/register"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:src="@drawable/ehe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:ignore="ContentDescription" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:background="@color/white"
            android:id="@+id/in_user"
            android:hint="@string/masukan_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:background="@color/white"
        android:id="@+id/in_email"
        android:hint="@string/masukan_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:inputType="textPassword"
            android:background="@color/white"
            android:id="@+id/in_pass"
            android:hint="@string/masukan_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
    <EditText
        android:inputType="textPassword"
        android:id="@+id/in_passwordulang"
        android:background="@color/white"
        android:hint="@string/masukan_ulang_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/roundcorner"
        android:id="@+id/btnRegis"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>